spacing fix

--- a/main.css
+++ b/main.css
@@ -254,4 +254,22 @@ img.topcapimg {
   img.topcapimg {
     height: 400px;
   }
+  
+  .custom-footer {
+    height: auto;
+    padding-bottom: 145px;
+  }
+  
+  .galleryImage {
+    
+  }
+  
+  .mobile-padding {
+    padding-top: 100px;
+    position: relative; top: 100px;
+  }
+  
+  body {
+    padding-bottom: 30px;
+  }
 }
